# 1g4-panel

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml  cmake.yml
plugin-volume/: CMakeLists.txt  audiodevice.cpp  audioengine.cpp  audioengine.h  oneg4volume.cpp  oneg4volume.h  oneg4volumeconfiguration.cpp  oneg4volumeconfiguration.h  oneg4volumeconfiguration.ui  pipewireengine.cpp  pipewireengine.h  pulseaudioengine.cpp  pulseaudioengine.h  sinkselection.cpp  sinkselection.h  testaudioengine.cpp  testaudioengine.h  volumebutton.cpp  volumebutton.h  volumelogging.cpp  volumelogging.h  volumepopup.cpp  volumepopup.h  wireplumberpolicy.cpp
plugin-volume/docs/: backend-target-matrix.md  design-decisions.md  wireplumber-migration.md
tests/: CMakeLists.txt  audioengine_ignoremaxvolume_test.cpp  audioengine_snapshot_test.cpp  check_audio_device_parent_ownership_guard.cmake  check_keyboard_notification_setting_removed.cmake  check_oneg4volume_preprocessor_guard.cmake  check_pipewire_debug_logging_guard.cmake  check_pipewire_teardown_queued_signal_guard.cmake  check_pulseaudio_shutdown_guard.cmake  check_pulseaudio_unique_connection_guard.cmake  check_volume_backend_target_matrix_doc_guard.cmake  check_volume_backend_ui_queued_connections_guard.cmake  check_volume_build_integration_guard.cmake  check_volume_configuration_dialog_guard.cmake  check_volume_dependency_checks_guard.cmake  check_volume_design_decisions_doc_guard.cmake  check_volume_dev_flags_guard.cmake  check_volume_external_mixer_action_guard.cmake  check_volume_feature_toggles_guard.cmake  check_volume_logging_categories_guard.cmake  check_volume_no_libpulse_runtime_guard.cmake  check_volume_pipewire_only_backend_guard.cmake  check_volume_standalone_dev_path_guard.cmake  pipewireengine_restart_test.cpp  plugin_volume_plugin_load_test.cpp  sinkselection_test.cpp  tsan_qttest.supp  volume_default_sink_sync_test.cpp  volumeconfiguration_lazy_rebuild_test.cpp  volumepopup_drag_test.cpp
